# talk-to-wiki

./: .gitignore  LICENSE  README.md  pyproject.toml
api/: main.py
eval/: analysis.ipynb  eval.py  questions.json
eval/outputs/: evaluated_questions_non-rag.json  evaluated_questions_rag.json  non-rag_v3.json  rag_v3.json
ingestion/: chunk.py  fetch.py  process.py
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/components/: ChatBox.tsx
