[project]
name = "talk-to-wiki"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
    "markdownify>=1.2.2",
    "openai>=2.30.0",
    "python-dotenv>=1.2.2",
    "semantic-text-splitter>=0.29.0",
    "supabase>=2.28.3",
]
